// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GrowthSummarySection component should render showGrowthSummarySection is false 1`] = `
<GrowthSummarySection
  name="Diagnostic"
  showGrowthSummary={false}
>
  <section
    className="growth-summary"
  >
    <div>
      <h4>
        Growth summary
      </h4>
      <p>
        <img
          alt="Bar chart growth icon"
          src="undefined/images/pages/diagnostic_reports/icons-bar-graph-increasing.svg"
        />
        <span>
          Not available for diagnostics completed before August 2023.
        </span>
      </p>
    </div>
  </section>
</GrowthSummarySection>
`;

exports[`GrowthSummarySection component should render showGrowthSummarySection is true and skillsGrowth is 0 1`] = `
<GrowthSummarySection
  growthSummaryLink=""
  name="Diagnostic"
  showGrowthSummary={true}
  skillsGrowth={0}
>
  <section
    className="growth-summary"
  >
    <div>
      <h4>
        Growth summary
      </h4>
      <p>
        <img
          alt="Bar chart growth icon"
          src="undefined/images/pages/diagnostic_reports/icons-bar-graph-increasing.svg"
        />
        <span>
          Not available for diagnostics completed before August 2023.
        </span>
      </p>
    </div>
  </section>
</GrowthSummarySection>
`;

exports[`GrowthSummarySection component should render showGrowthSummarySection is true and skillsGrowth is larger than 0 1`] = `
<GrowthSummarySection
  growthSummaryLink=""
  name="Diagnostic"
  showGrowthSummary={true}
  skillsGrowth={18}
>
  <section
    className="growth-summary"
  >
    <div>
      <h4>
        Growth summary
      </h4>
      <p>
        <img
          alt="Bar chart growth icon"
          src="undefined/images/pages/diagnostic_reports/icons-bar-graph-increasing.svg"
        />
        <span>
          Not available for diagnostics completed before August 2023.
        </span>
      </p>
    </div>
  </section>
</GrowthSummarySection>
`;

exports[`GrowthSummarySection component should render showGrowthSummarySection is true and skillsGrowth is null 1`] = `
<GrowthSummarySection
  growthSummaryLink=""
  name="Diagnostic"
  showGrowthSummary={true}
  skillsGrowth={null}
>
  <section
    className="growth-summary"
  >
    <div>
      <h4>
        Growth summary
      </h4>
      <p>
        <img
          alt="Bar chart growth icon"
          src="undefined/images/pages/diagnostic_reports/icons-bar-graph-increasing.svg"
        />
        <span>
          Not available for diagnostics completed before August 2023.
        </span>
      </p>
    </div>
  </section>
</GrowthSummarySection>
`;
